--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "drupal/console": "^1.0.2",
         "drupal/core": "^8.6.0",
         "drupal/devel": "^1.2",
+        "drupal/markdown": "^1.2",
         "drupal/writer": "^2.5",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
