--- a/config/sync/core.entity_view_display.node.article.teaser.yml
+++ b/config/sync/core.entity_view_display.node.article.teaser.yml
@@ -12,7 +12,6 @@ dependencies:
     - node.type.article
   module:
     - image
-    - text
     - user
 _core:
   default_config_hash: 4NcL2hSQZBpJbYtNuh5jC6kyQTcAc1m5bQpTegEWEso
@@ -21,35 +20,17 @@ targetEntityType: node
 bundle: article
 mode: teaser
 content:
-  body:
-    type: text_summary_or_trimmed
-    weight: 0
-    region: content
-    settings:
-      trim_length: 600
-    third_party_settings: {  }
-    label: hidden
   field_image:
     type: image
-    weight: -1
+    weight: 0
     region: content
     settings:
       image_style: medium
       image_link: content
     third_party_settings: {  }
     label: hidden
-  field_tags:
-    type: entity_reference_label
-    weight: 10
-    region: content
-    settings:
-      link: true
-    third_party_settings: {  }
-    label: above
-  links:
-    weight: 100
-    region: content
 hidden:
+  body: true
   comment: true
-  field_image: true
   field_tags: true
+  links: true
