--- a/web/themes/custom/writerrtl/writerrtl.libraries.yml
+++ b/web/themes/custom/writerrtl/writerrtl.libraries.yml
@@ -35,7 +35,7 @@ zebra-snippets:
 global-assets-rtl:
   css:
     base:
-      '//fonts.googleapis.com/css?family=Lato|Inconsolata|Merriweather:400,400italic,700,700italic&subset=latin,latin-ext':
+      '//fonts.googleapis.com/css?family=Markazi+Text:400,500,600,700':
         type: external
         minified: true
     theme:
