add writerrtl css

--- a/web/themes/custom/writerrtl/writerrtl.libraries.yml
+++ b/web/themes/custom/writerrtl/writerrtl.libraries.yml
@@ -35,7 +35,7 @@ zebra-snippets:
 global-assets-rtl:
   css:
     base:
-      '//fonts.googleapis.com/css?family=Markazi+Text:400,500,600,700':
+      '//fonts.googleapis.com/css?family=Mirza:400,500,600,700':
         type: external
         minified: true
     theme:
