install ip_language_negotiation module

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "drupal/console": "^1.0.2",
         "drupal/core": "^8.6.0",
         "drupal/devel": "^1.2",
+        "drupal/ip_language_negotiation": "^1.0",
         "drupal/markdown": "^1.2",
         "drupal/writer": "^2.5",
         "drush/drush": "^9.0.0",
